# anni-workspace-gui

./: .eslintrc.cjs  .eslintrc.json  .gitmodules  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Common/GlobalLoading/: index.module.scss
src/components/DiscImportGuide/: index.tsx  services.ts
src/components/DiscImportGuide/BasicInfoEditDialog/: index.tsx
src/components/DiscImportGuide/CommitConfirmDialog/: index.tsx
src/components/DiscImportGuide/CoverConfirmDialog/: index.module.scss  index.tsx
src/components/DiscImportGuide/CoverSearchDialog/: index.module.scss  index.tsx
src/components/SetupGuide/: index.module.scss  index.scss  index.tsx
src/components/SetupGuide/CreateWorkspaceConfigDialog/: index.tsx
src/components/Workspace/: index.module.scss  index.tsx  state.ts  types.ts
src/hooks/: useFileDrop.ts
src/indexer/: AlbumFileIndexer.ts  TagFileIndexer.ts
src/main/: index.ts
src/main/modules/: anni_rust.ts  dialog.ts  fs.ts  path.ts  request.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  constants.ts  global.d.ts  main.tsx
src/renderer/src/types/: album.ts  (+1 more)
src/scrapers/: base.ts  musicbrainz.ts  utils.ts  vgmdb.ts
src/state/: workspace.ts
src/types/: album.ts  repo.ts  tag.ts
src/utils/: album.ts  error.ts  file.ts  helper.ts  log.ts  tag.ts
(+151 files in other folders)
