[package]
name = "anni-workspace-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }
toml_edit = { version = "0.14.4", features = ["easy"] }
anni-repo = { path = "../anni/anni-repo" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
# Remove this patch after https://github.com/rusqlite/rusqlite/pull/1010 was merged
rusqlite = { git = "https://github.com/ProjectAnni/rusqlite", branch = "wasm32-unknown-unknown" }
# Remove this patch after https://github.com/ordian/toml_edit/pull/334 was merged
toml_edit = { git = "https://github.com/ProjectAnni/toml_edit", branch = "master" }
# Remove this patch after https://github.com/mackwic/colored/pull/119 was merged
colored = { git = "https://github.com/ProjectAnni/colored", branch = "master" }
